# lockdex

./: Android.bp  Cargo.toml  README.md
docs/: BINDER_FINDINGS.md  FINDINGS.md  RACE_FINDINGS.md
examples/: regen_dex.rs
src/: analyze.rs  binder.rs  dexdump.rs  export.rs  graph.rs  input.rs  juc.rs  lib.rs  main.rs  model.rs  races.rs  report.rs  source.rs  verify.rs
src/analyze/: binder.rs  callgraph.rs  extract.rs  fixpoint.rs  mod.rs  races.rs
tests/: binder.rs  corpus.rs  races.rs  run_corpus.sh
tests/binder/: B01_HoldAcrossOutgoing.dex  B01_HoldAcrossOutgoing.java  B02_ReleaseBeforeOutgoing.dex  B02_ReleaseBeforeOutgoing.java  B03_IncomingEntryAcquires.dex  B03_IncomingEntryAcquires.java  B04_NestedIncomingOutgoing.dex  B04_NestedIncomingOutgoing.java  B05_TransitiveReach.dex  B05_TransitiveReach.java
tests/corpus/: T01_SimpleABBA.dex  T01_SimpleABBA.java  T02_InterprocABBA.dex  T02_InterprocABBA.java  T03_GetterAlias.dex  T03_GetterAlias.java  T04_TwoInstance.dex  T04_TwoInstance.java  T05_GuardProtected.dex  T05_GuardProtected.java  T06_AsyncBoundary.dex  T06_AsyncBoundary.java  T07_JucLock.dex  T07_JucLock.java  T08_RWLock.dex  T08_RWLock.java  T09_Reentrancy.dex  T09_Reentrancy.java  T10_LambdaCapture.dex  T10_LambdaCapture.java  T11_TryLock.dex  T11_TryLock.java  T18_SharedLockAlias.dex  T18_SharedLockAlias.java  T19_Inheritance.dex  T19_Inheritance.java  T20_StaticClassLock.dex  T20_StaticClassLock.java  T21_ThisMonitor.dex  T21_ThisMonitor.java  T22_CtorParamAlias.dex  T22_CtorParamAlias.java  T23_ThreeLockCycle.dex  T23_ThreeLockCycle.java  (+4 more)
(+30 files in other folders)
